# kmflow

./: Cargo.toml  LICENSE  PLAN.html  README.md
.github/workflows/: ci.yml
crates/kmflow-cli/: Cargo.toml
crates/kmflow-cli/src/: main.rs
crates/kmflow-daemon/: Cargo.toml
crates/kmflow-daemon/src/: clipboard.rs  edge.rs  ipc.rs  lib.rs  state.rs
crates/kmflow-input/: Cargo.toml
crates/kmflow-input/src/: evdev_capture.rs  evdev_emulate.rs  lib.rs  x11_capture.rs  x11_emulate.rs
crates/kmflow-net/: Cargo.toml
crates/kmflow-net/src/: discovery.rs  integration_test.rs  lib.rs  quic.rs  tls.rs
crates/kmflow-proto/: Cargo.toml
crates/kmflow-proto/src/: lib.rs
