[workspace]
members = [
    "crates/kmflow-proto",
    "crates/kmflow-net",
    "crates/kmflow-input",
    "crates/kmflow-daemon",
    "crates/kmflow-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }

# Async
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Network
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.14"

# Input - X11
x11rb = { version = "0.13", features = ["xinput", "xtest", "randr"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Config
toml = "1"
directories = "6"
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Internal crates
kmflow-proto = { path = "crates/kmflow-proto" }
kmflow-net = { path = "crates/kmflow-net" }
kmflow-input = { path = "crates/kmflow-input" }
kmflow-daemon = { path = "crates/kmflow-daemon" }
