[package]
name = "kmflow-net"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "KMFlow QUIC networking and mDNS discovery"

[dependencies]
kmflow-proto.workspace = true
quinn.workspace = true
rustls.workspace = true
rcgen.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
directories.workspace = true
ring = "0.17"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
